View Issue Details

IDProjectCategoryView StatusLast Update
0023409Open CASCADEOCCT:DRAWpublic2012-11-16 13:17
Reporteroan Assigned Tooan  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.5.3 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023409: Tricheck command doesn't report problem when triangulation has unexpected holes
Descriptiontricheck should be improved to detect holes in the triangulation. This problem is described in 0023167 by abv:

I noticed another problem: neither incmesh nor tricheck nor trinfo commands in DRAW notice the problem in triangulation when it existed.

I have attached file bug23167_f397.brep which is face 397 from the STEP file coming with bug report, with triangulation computed by previous snapshot of OCCT (should be similar to that produced by OCCT 6.5.3).

Problematic shape from bug 0023167 is attached.
Steps To ReproduceDo in DRAW:

restore bug23167_f397.brep a
vdisplay a
# shape looks bad!
axo
fit
isos a 0
triangles a
# free edges can be seen
trinfo a
tricheck a
# no problems are reported -- why?
TagsNo tags attached.
Test case numberbugs demo CR23409

Attached Files

  • bug23167_f397.brep (89,363 bytes)

Relationships

child of 0023167 closedbugmaster Community Hole in Triangulation 

Activities

oan

2012-08-29 19:04

developer  

bug23167_f397.brep (89,363 bytes)

oan

2012-09-03 11:14

developer   ~0021392

Dear EPA,

Could you please review the branch CR23409?

epa

2012-09-03 15:31

developer   ~0021397

I have no remarks; please test

oan

2012-09-03 15:46

developer   ~0021398

Dear Bugmaster,

please test the branch CR23409.

Now tricheck command indicates a mesh problem if a hole between mesh internal links is detected. For the attached shape result of tricheck is the following:

restore bug23167_f397.brep a
vinit
vsetdispmode 1
vdisplay a
# shape looks bad!
axo
fit
isos a 0
triangles a
# free edges can be seen
tricheck a
## Result of old mesh checking => Not connected mesh inside face 1

tclean a
incmesh a 0.01
tricheck a
## Result of new mesh checking => empty, i.e. Ok
vdisplay a
## and shape looks good in the viewer

apn

2012-09-04 13:37

administrator   ~0021406

Dear BugMaster,
Branch CR23409 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regression:
Not detected

Improvements:
Not detected

Testing case:
bugs demo CR23409

Related Changesets

occt: master 2e1a4dae

2012-09-07 09:58:12

oan

Details Diff
0023409: Tricheck command doesn't report problem when triangulation has unexpected holes

Tricheck command improvement for checking triangulation holes on free links
More obvious error message
Added test case bugs demo CR23409
Modified test case offset wire_closed_outside_0_005 G7
Affected Issues
0023409
mod - src/BRepMesh/BRepMesh_Edge.cdl Diff File
mod - src/BRepMesh/BRepMesh_Edge.lxx Diff File
mod - src/MeshTest/MeshTest_PluginCommands.cxx Diff File
add - tests/bugs/demo/CR23409 Diff File

Issue History

Date Modified Username Field Change
2012-08-29 19:04 oan New Issue
2012-08-29 19:04 oan Assigned To => mkv
2012-08-29 19:04 oan File Added: bug23167_f397.brep
2012-08-29 19:05 oan Relationship added child of 0023167
2012-08-31 14:54 mkv Assigned To mkv => bugmaster
2012-09-03 09:42 abv Assigned To bugmaster => oan
2012-09-03 09:42 abv Status new => assigned
2012-09-03 11:14 oan Note Added: 0021392
2012-09-03 11:14 oan Assigned To oan => epa
2012-09-03 11:14 oan Status assigned => resolved
2012-09-03 15:31 epa Note Added: 0021397
2012-09-03 15:37 epa Status resolved => reviewed
2012-09-03 15:38 epa Assigned To epa => oan
2012-09-03 15:40 apn Assigned To oan => apn
2012-09-03 15:46 oan Note Added: 0021398
2012-09-04 13:37 apn Note Added: 0021406
2012-09-04 13:41 apn Test case number => bugs demo CR23409
2012-09-04 13:41 apn Assigned To apn => bugmaster
2012-09-04 13:41 apn Status reviewed => tested
2012-09-10 17:08 oan Changeset attached => occt master 2e1a4dae
2012-09-10 17:10 oan Assigned To bugmaster => oan
2012-09-10 17:10 oan Status tested => verified
2012-09-10 17:10 oan Resolution open => fixed
2012-10-01 14:23 bugmaster Target Version => 6.5.4
2012-11-16 13:14 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:17 bugmaster Status verified => closed