0023409: Tricheck command doesn't report problem when triangulation has unexpected holes

Tricheck command improvement for checking triangulation holes on free links
More obvious error message
Added test case bugs demo CR23409
Modified test case offset wire_closed_outside_0_005 G7